--- a/.classpath
+++ b/.classpath
@@ -12,5 +12,6 @@
 	<classpathentry kind="lib" path="Selenium Libs/guava-25.0-jre.jar"/>
 	<classpathentry kind="lib" path="Selenium Libs/okhttp-3.11.0.jar"/>
 	<classpathentry kind="lib" path="Selenium Libs/okio-1.14.0.jar"/>
+	<classpathentry kind="lib" path="/PageObjectPageFactory/lib/commons-io-2.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
